--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="sketch">
         <h3 class="sketch-description">In developing user interfaces it's helpful for designers to put themselves in the shoes of those using the interface. This website walks through the process using CVS self-checkout machines as a case study. I've outlined the interface components below.  </h3>
   
-          <img class="sketch-img" src="./assets/CVS Checkout Sketch.png" alt="Diagram of the CVS self checkout ">
+          <img class="sketch-img" src="CVS Checkout Sketch.png" alt="Diagram of the CVS self checkout ">
           <div class="sketch-functionality">
               <h6 class="white-title">What's What</h6>
               <ol class="sketch-list" type="1">
@@ -89,18 +89,17 @@
       <div class="personas">
         <h5 class="black-title">Personas:</h5>
         <div class ="horizontal-flex">
-          <img class="persona-img" src="./assets/Persona 1.png" alt="Persona of Ronald, a shopper who has a bad experience ">
-          <img class="persona-img" src="./assets/Persona 2.png" alt="Persona of Linda, a shopper who has a good experience ">
+          <img class="persona-img" src="Persona 1.png" alt="Persona of Ronald, a shopper who has a bad experience ">
+          <img class="persona-img" src="Persona 2.png" alt="Persona of Linda, a shopper who has a good experience ">
         </div>
       </div>
 
       <div class="storyboard">
         <h6 class="white-title" > I then used these personas to create one storyboard about the self-checkout experience at CVS:</h6>
-        <img class = "storyboard-img" src="./assets/storyboard1.png" alt="Story board of Ronald a stressed college student who remembers he needs pencils. While in CVS he picks up other items he needs. He opts to use the self checkout but in his rush starts to put items in his bag instead of the scale." >
-        <img class = "storyboard-img" src="./assets/storyboard2.png" alt="Continued storyboard, the bagging error causes the system to lockout, Ronald is angry, he waits for a cashier to come let him back in. He then proceeds with his checkout making sure to bag each item. He then disappears quickly into the night leaving behind his receipt. Ronald is not even more stressed and angry than before. ">
+        <img class = "storyboard-img" src="storyboard1.png" alt="Story board of Ronald a stressed college student who remembers he needs pencils. While in CVS he picks up other items he needs. He opts to use the self checkout but in his rush starts to put items in his bag instead of the scale." >
+        <img class = "storyboard-img" src="storyboard2.png" alt="Continued storyboard, the bagging error causes the system to lockout, Ronald is angry, he waits for a cashier to come let him back in. He then proceeds with his checkout making sure to bag each item. He then disappears quickly into the night leaving behind his receipt. Ronald is not even more stressed and angry than before. ">
       </div>
       
     </div>
 
-      
 </html>
